fix "fix port alignment"
dropdown was broken apart, the options where detached from the input
field.

CMK-29348

--- a/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_wato.scss
@@ -1470,7 +1470,8 @@ div.user_messages {
 #form_edit_host table#monitoring_agents {
   div#attr_default_tag_agent,
   div#attr_entry_tag_agent {
-    display: flex;
+    display: flex; /* move port field to the top */
+    align-items: flex-start; /* make sure select2 dropdown does not break */
     div.cmk-vue-app {
       display: contents;
     }
